feat: adiciona a função de exclusão de cliente e seus respectivos clientes
